<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HappyTraveler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt">Are you a rider or a driver?</string>
    <string name="rider_prompt">I am a rider.</string>
    <string name="driver_prompt">I am a driver.</string>
    <string name="driver_page_name">driver_page</string>
    <string name="rider_page_name">rider_page</string>
    <string name="rate_me">Rate Me</string>
    <string name="submit">Submit</string>
    <string name="server_url">http://sluglug.soe.ucsc.edu/~keith/HT/server.php</string>
    <string name="street">Street</string>
    <string name="time">Time (minutes)</string>
    <string name="home">Home</string>
    <string name="zipcode">zip code</string>
	<string name="states">States</string>
	<string name="timePrompt">Please enter the amount of time till you leave:</string>
	<string name="destinationPrompt">Please enter the address of your destination:</string>
	<string name="getRider">Get a Rider!</string>
    <string name="title_activity_ihave_aride">IHaveARide</string>
    <string name="needRideButton">Find a Ride!</string>
    <string name="addressPrompt">Street: </string>
    <string name="needARideTitle">Request a Ride</string>
    <string name="addressHint">address</string>
    <string name="addressPromptState">State: </string>
    <string-array name="States">
        <item>-Select State- </item>
        <item>Alabama </item>
		<item>Alaska </item>
		<item>Arizona </item>
		<item>Arkansas </item>
		<item>California </item>
		<item>Colorado </item>
		<item>Connecticut </item>
		<item>Delaware </item>
		<item>Florida </item>
		<item>Georgia </item>
		<item>Hawaii </item>
		<item>Idaho </item>
		<item>Illinois Indiana </item>
		<item>Iowa </item>
		<item>Kansas </item>
		<item>Kentucky </item>
		<item>Louisiana </item>
		<item>Maine </item>
		<item>Maryland </item>
		<item>Massachusetts </item>
		<item>Michigan </item>
		<item>Minnesota </item>
		<item>Mississippi </item>
		<item>Missouri </item>
		<item>Montana Nebraska </item>
		<item>Nevada </item>
		<item>New Hampshire </item>
		<item>New Jersey </item>
		<item>New Mexico </item>
		<item>New York </item>
		<item>North Carolina </item>
		<item>North Dakota </item>
		<item>Ohio </item>
		<item>Oklahoma </item>
		<item>Oregon </item>
		<item>Pennsylvania Rhode Island </item>
		<item>South Carolina </item>
		<item>South Dakota </item>
		<item>Tennessee </item>
		<item>Texas </item>
		<item>Utah </item>
		<item>Vermont </item>
		<item>Virginia </item>
		<item>Washington </item>
		<item>West Virginia </item>
		<item>Wisconsin </item>
		<item>Wyoming</item>
    </string-array>
	<string name="selectState">Select State</string>
				<string name="zipcodePrompt">Zip Code: </string>
	<string name="enterAddressText">"Destination Address: "</string>
	<string name="statePrompt">State</string>
	<string name="zipHint">zip code</string>
	<string name="selectARider">Select a Rider:</string>
	<string name="city">City</string>
	<string name="getrider">Get a Rider!</string>
	<string name="pleaseWaitRequest">Please wait for a driver to respond to your request...</string>
	<string name="cancelRequest">Cancel Request</string>
	<string name="enjoyRide">Enjoy your ride!  Hit the button below when you are finished.</string>
	<string name="continueRatings">Continue to Ratings</string>
	<string name="selectARider">Select A Rider:</string>
	<string name="confirm">Confirm</string>
	<string name="unknownName">NAME UNKNOWN</string>
	<string name="confirmPickup">Do you wish to pick this driver up?</string>
	<string name="locationUnknown">LOCATION UNKNOWN</string>
</resources>
