<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/riderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/unknownName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/riderRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riderName"
        android:rating="0.0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/pickupConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/confirmPickup"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="70dp"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/riderLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riderRating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/locationUnknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
